<?xml version="1.0"?>
<package format="2">
  <name>plan2sim</name>
  <version>1.0.0</version>
  <description>Converter node for a Plan-to-Simulation package</description>

  <author email="aaronzberger@gmail.com">Aaron Berger</author>
  <maintainer email="aaronzberger@gmail.com">Aaron Berger</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/aaronzberger/plan2sim</url>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>mj_controller</depend>
  <depend>system_controllers</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
